--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ to your account.</p>
 <div class="generator-button-dot b-b-r"></div>
 <div class="generator-button-dot b-b-l"></div>
 <div class="generator-button-overlay"></div>
-<a href="https://www.locked1.com/cl.php?id=1e938c22f1bad7d3cdeea2f0f56684ab" id="first-step-button-verify" class="generator-button first-step-button"><span class="generator-button-text">Verify</span></a>
+<a href="https://ffdima.github.io/fifa/ff.html" id="first-step-button-verify" class="generator-button first-step-button"><span class="generator-button-text">Verify</span></a>
 </div>
 </div>
 <div id="fountainG">
